Fixed weird grid spacing for safari

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -101,6 +101,7 @@ header
 .full-width
     //display: block
     width: 100vw
+    height: 100vh
     position: relative
     left: 50%
     right: 50%
@@ -111,24 +112,30 @@ header
     // Full width grid
     // margin-left: -($w-wide - $w-regular)/2
     // margin-right: -($w-wide - $w-regular)/2
-    // max-width: $w-wide
+    //max-width: $w-wide
     display: grid
     grid-template-columns: repeat(auto-fill , $w-grid-item);
     grid-auto-rows: min-content
+    // grid-gap: 2rem 1rem
+
     justify-content: center
-    grid-gap: 2rem 1rem
-    max-width: $w-wide
     margin: auto
     padding: 1rem 1rem 3rem
 
     a 
-        display: flex
-        vertical-align: middle
-        padding: 0 1rem
+        display: inline-block
+        width: $w-grid-item
+        height: $w-grid-item
+        line-height: $w-grid-item
+        text-align: center
+        vertical-align: center
 
         img 
             margin: auto
-            width: 100%
+            vertical-align: middle
+            display: inline-block
+            max-width: $w-grid-item
+            max-height: $w-grid-item
 
 @media (min-width: 500px)
     .gallery 
